Details
-
Bug
-
Resolution: Fixed
-
Major
Description
Steps to reproduce:
- Start ReactOS (applicable to both LiveCD and BootCD)
- Start Device Manager
- Choose any device and open its properties
- Select "Driver" tab and click "Update Driver" button
- Do not proceed with update and hit cancel
- Close Device Manager and start it again
Expected behaviour: Device remains the same
Observed behaviour: Device now belongs to "Other Devices" class
The problem does not seem to affect any device drivers, it's probably just a visual bug.
Debug log | Screenshot | |
---|---|---|
Before: Device remains the same | 0.4.15-dev-2351-g0e3fce0.txt![]() |
![]() |
After: Unknown device in Devices by Connection | 0.4.15-dev-2352-g3fa57b8.txt![]() |
![]() |
Later: Unknown device in Other Devices | 0.4.15-dev-2354-g9e947e2.txt![]() |
![]() |
Video demo: 0.4.15-dev-2354-g9e947e2.webm
Cc ekohl for guilty commit and hpoussin as he also might know something in this area.
Attachments
Issue Links
- blocks
-
CORE-17527 Reinstall Driver button is missing in General tab for unknown devices with Device Manager
-
- Resolved
-