[newdev] Stop update driver wizard from changing device class

The update driver wizard should not change the device class by default
specialy when there is allready a class set. This is the case when the
wizard gets called from the device manager.

Jira: CORE-18166